fix ie11 specific Q&A module spacing bug

--- a/src/Aheadworks_Pquestion/web/css/_product-questions.scss
+++ b/src/Aheadworks_Pquestion/web/css/_product-questions.scss
@@ -102,6 +102,12 @@
                 font-size: 1.3rem;
                 color: $color-qa-label;
 
+                .ie11 & {
+                    @include media('>=tablet') {
+                        flex-basis: 10rem;
+                    }
+                }
+
                 @include media('>=tablet') {
                     font-size: 1.2rem;
                 }
